--- a/app/src/main/res/layout/fragment_full_screen.xml
+++ b/app/src/main/res/layout/fragment_full_screen.xml
@@ -21,5 +21,12 @@
     app:enableAutomaticInitialization="false"
     />
 
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_back_arrow"
+        android:backgroundTint="@android:color/transparent"/>
+
 
 </FrameLayout>
