--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,6 +36,7 @@
                 android:layout_width="35dp"
                 android:layout_height="30dp"
                 android:layout_gravity="end"
+                android:layout_margin="5dp"
                 android:src="@drawable/ic_chevron_right" />
 
 
@@ -44,6 +45,7 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_gravity="end"
+                android:layout_margin="5dp"
                 android:src="@drawable/ic_search" />
         </com.google.android.material.appbar.MaterialToolbar>
 
