--- a/app/src/main/res/layout/rcy_item_accounts.xml
+++ b/app/src/main/res/layout/rcy_item_accounts.xml
@@ -12,37 +12,42 @@
         android:id="@+id/progressBar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        style="?android:attr/progressBarStyleLarge"
-        app:indicatorColor="@color/red"
-        app:layout_constraintTop_toTopOf="@id/imgAccounts"
-        app:layout_constraintBottom_toBottomOf="@id/imgAccounts"
-        app:layout_constraintStart_toStartOf="@id/imgAccounts"
-        app:layout_constraintEnd_toEndOf="@id/imgAccounts"/>
+        style="?android:attr/progressBarStyleSmall"
+        app:layout_constraintTop_toTopOf="@id/cardViewPoster"
+        app:layout_constraintBottom_toBottomOf="@id/cardViewPoster"
+        app:layout_constraintStart_toStartOf="@id/cardViewPoster"
+        app:layout_constraintEnd_toEndOf="@id/cardViewPoster"/>
 
 
 
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardViewPoster"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:layout_constraintBottom_toTopOf="@id/txtAccounts"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
     <ImageView
         android:id="@+id/imgAccounts"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_chevron_right"
-        app:layout_constraintBottom_toTopOf="@id/txtAccounts"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/add_filled"
         android:padding="5dp"/>
 
+    </com.google.android.material.card.MaterialCardView>
     <TextView
         android:id="@+id/txtAccounts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Accounts name"
+        android:text="Account"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imgAccounts" />
+        app:layout_constraintTop_toBottomOf="@id/cardViewPoster" />
 
     <ImageView
         android:id="@+id/imgLock"
