Pin dialog vibration settled

--- a/app/src/main/res/layout/fragment_pin_dialog.xml
+++ b/app/src/main/res/layout/fragment_pin_dialog.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingHorizontal="40dp"
+    android:paddingVertical="25dp"
+    android:background="@color/dark_gray"
     tools:context=".presentation.fragments.accounts.ui.PinDialogFragment"
-    app:strokeWidth="0dp"
-    app:cardCornerRadius="0dp"
     >
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingHorizontal="40dp"
-        android:paddingVertical="25dp"
-        android:background="@color/dark_gray">
+
 
 
     <TextView
@@ -80,5 +77,4 @@
             />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</com.google.android.material.card.MaterialCardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
