--- a/app/src/main/res/anim/bouncing_anim.xml
+++ b/app/src/main/res/anim/bouncing_anim.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- res/anim/bounce_enter.xml -->
 
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Translate the fragment downward -->
-    <translate
-        android:fromYDelta="-100%"
-        android:toYDelta="0"
-        android:duration="500"/>
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@android:anim/cycle_interpolator"
+    android:fillAfter="true">
 
-    <!-- Scale the fragment from 50% to 100% -->
-    <scale
-        android:fromXScale="0.5"
-        android:fromYScale="0.5"
-        android:toXScale="1.0"
-        android:toYScale="1.0"
-        android:pivotX="50%"
-        android:pivotY="50%"
-        android:duration="500"/>
+    <translate
+        android:fromXDelta="0"
+        android:toXDelta="5"
+        android:duration="50"
+        android:repeatMode="reverse"
+        android:repeatCount="5"/>
 </set>
