--- a/app/src/main/res/layout/rcy_movie_item_big_poster.xml
+++ b/app/src/main/res/layout/rcy_movie_item_big_poster.xml
@@ -30,7 +30,7 @@
             android:id="@+id/imgBigPoster"
             android:layout_width="194dp"
             android:layout_height="286dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
