--- a/app/src/main/res/layout/rcy_movie_item_games.xml
+++ b/app/src/main/res/layout/rcy_movie_item_games.xml
@@ -36,7 +36,7 @@
             android:id="@+id/imgSmallPoster"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             />
 
     </com.google.android.material.card.MaterialCardView>
