--- a/app/src/main/res/layout/rcy_new_item_coming_soon.xml
+++ b/app/src/main/res/layout/rcy_new_item_coming_soon.xml
@@ -9,7 +9,7 @@
         android:id="@+id/progressBar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        style="?android:attr/progressBarStyleLarge"
+        style="?android:attr/progressBarStyleSmall"
         app:indicatorColor="@color/red"
         app:layout_constraintTop_toTopOf="@+id/cardViewVideo"
         app:layout_constraintBottom_toBottomOf="@+id/cardViewVideo"
@@ -59,7 +59,7 @@
             android:id="@+id/imgVideo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
 
             />
 
@@ -71,7 +71,7 @@
         android:id="@+id/imgPosterFilmName"
         android:layout_width="0dp"
         android:layout_height="85dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:src="@drawable/img"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/cardViewVideo"
