--- a/app/src/main/res/layout/rcy_recommended_movies.xml
+++ b/app/src/main/res/layout/rcy_recommended_movies.xml
@@ -31,7 +31,7 @@
             android:id="@+id/imgPoster"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             />
     </com.google.android.material.card.MaterialCardView>
 
