--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,10 @@
 
     </style>
 
-
+    <style name="TransparentDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
 
     <style name="ThreeDotStyle" parent="Widget.AppCompat.Light.ActionButton.Overflow">
         <item name="android:tint">@color/white</item>
