--- a/app/src/main/res/layout/fragment_downloads.xml
+++ b/app/src/main/res/layout/fragment_downloads.xml
@@ -34,7 +34,7 @@
         android:layout_height="40dp"
         android:padding="3dp"
         android:scaleType="fitXY"
-        android:src="@drawable/img"
+        android:src="@drawable/netflix_avatar1"
         app:layout_constraintBottom_toBottomOf="@id/txtPageName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -71,7 +71,7 @@
                 android:id="@+id/imgRcyHeader"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/img"
+                android:src="@drawable/netflix_avatar1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:contentDescription="@string/img_rcy_header"/>
