--- a/app/src/main/res/layout/rcy_movie_item_medium_poster.xml
+++ b/app/src/main/res/layout/rcy_movie_item_medium_poster.xml
@@ -8,7 +8,8 @@
     app:strokeWidth="0dp"
     app:rippleColor="@color/gray"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    android:backgroundTint="@android:color/transparent">
 
 
 
