--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,7 +37,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="end"
                 android:layout_margin="5dp"
-                android:src="@drawable/ic_chevron_right" />
+                android:src="@drawable/netflix_avatar1" />
 
 
             <ImageView
@@ -199,6 +199,17 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcyHomeRecyclersCollection"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/cardViewPoster"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:listitem="@layout/rcy_home_items_child_rcys"
+            android:nestedScrollingEnabled="false"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
