--- a/app/src/main/res/layout/rcy_item_accounts.xml
+++ b/app/src/main/res/layout/rcy_item_accounts.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp"
     android:layout_marginHorizontal="2dp"
+    android:backgroundTint="@android:color/transparent"
     >
 
     <ProgressBar
@@ -28,6 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:backgroundTint="@android:color/transparent"
         >
     <ImageView
         android:id="@+id/imgAccounts"
