--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="text_primary">#E6E6E6</color>
     <color name="text_secondary">#B3B3B3</color>
     <color name="dark_gray">#262626</color>
+    <color name="dark_gray_2">#1E1E1E</color>
     <color name="ripple">#E5E5E5</color>
     <color name="red">#C60A0A</color>
     <color name="black_transparent">#BF000000</color>
