--- a/app/src/main/res/layout/rcy_home_items_child_rcys.xml
+++ b/app/src/main/res/layout/rcy_home_items_child_rcys.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginVertical="10dp">
 
     <TextView
         android:id="@+id/txtRcyHeaders"
@@ -11,6 +12,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="18dp"
         android:text="Header"/>
 
     <androidx.recyclerview.widget.RecyclerView
